--- a/IQuad2/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/IQuad2/Views/Account/ExternalLoginConfirmation.cshtml
@@ -25,6 +25,20 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.Fname, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Fname, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Fname, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Lname, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Lname, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Lname, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
