Changing UserType fields

--- a/IQuad2/Views/Appointment/Set_Appointment.cshtml
+++ b/IQuad2/Views/Appointment/Set_Appointment.cshtml
@@ -1,8 +1,42 @@
-﻿@model IQuad2.ViewModels.AppointmentViewModel
+﻿@model IQuad2.Models.Appointment
 @{
-    ViewBag.Title = "Set_Appointment";
+    ViewBag.Title = "Set Appointment";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Set_Appointment</h2>
+@using (Html.BeginForm("Create", "Appointment"))
+{
+
+    <div class="form-group">
+
+        @Html.LabelFor(m => m.Fname)
+        @Html.TextBoxFor(m => m.Fname, new { @class = "form-control" })
+    </div>
+    <div class="form-group">
+
+        @Html.LabelFor(m => m.Lname)
+        @Html.TextBoxFor(m => m.Lname, new { @class = "form-control" })
+    </div>
+    <div class="form-group">
+
+        @Html.LabelFor(m => m.PurposeOfVisit)
+        @Html.TextAreaFor(m => m.PurposeOfVisit, new { @class = "form-control" })
+    </div>
+    <div class="form-group">
+
+        @Html.LabelFor(m => m.Date)
+        @Html.TextBoxFor(m => m.Date, new { @class = "form-control" })
+    </div>
+    <div class="form-group">
+
+        @Html.LabelFor(m => m.StartTime)
+        @Html.TextBoxFor(m => m.StartTime, new { @class = "form-control" })
+    </div>
+    <div class="form-group">
+
+        @Html.LabelFor(m => m.EndTime)
+        @Html.TextBoxFor(m => m.EndTime, new { @class = "form-control" })
+    </div>
+}
 
