--- a/IQuad2/Views/Home/Index.cshtml
+++ b/IQuad2/Views/Home/Index.cshtml
@@ -2,30 +2,155 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="container">
+    <div class="row">
+
+        <div class="col-md-4 p-0 one-col element-animate">
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4"><img src="~/pictures/appointment.png" />
+                <h2>Make an Appointment</h2>
+             
+                <div class="row">
+                    <div class="col-lg-12 d-flex flex-column">
+                        <input name="patient-name" placeholder="Full Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Patient Name'" class="form-control mt-20" required="" type="text">
+                    </div><br />
+
+                    <div class="col-lg-6 d-flex flex-column">
+                    <br />
+                        <input name="phone" placeholder="Phone" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone'" class="form-control mt-20" required="" type="text">
+                    </div>
+
+                    <div class="col-lg-6 d-flex flex-column">
+                        <br />
+                        <input name="email" placeholder="Email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email address'" class="form-control mt-20" required="" type="email">
+                    </div>
+
+                    <div class="col-lg-6 d-flex flex-column">
+                        <br />
+                        <input name="dob" placeholder="Date of birth" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Date of birth'" class="form-control mt-20" required="" type="text" id="datepicker">
+                    </div>
+
+                    <div class="col-lg-6 d-flex flex-column">
+                    <br />
+                        <input name="appoinment-date" placeholder="Appoinment date" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Appoinment date'" class="form-control mt-20" required="" type="text" id="datepicker2">
+                    </div><br />
+
+                    <div class="col-lg-12 flex-column">
+                    <br />
+                    <textarea rows="5" class="form-control mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
+                    </div> 
+
+                    <div class="col-lg-12 d-flex justify-content-end send-btn">
+                        <br />
+                        <button color="red">Confirm booking</button>
+                    </div>
+
+                    <div class="alert-msg"></div>
+                </div>
+                <hr />
+            </div>
+        </div>
+
+        <div class="col-md-4 p-0 two-col element-animate">
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                <img src="~/pictures/clock.png" />
+                <h2>Opening Hours</h2>
+                <ul class="colm-1">
+                    <li><h4>Monday - Friday <span>:</span>  8:00am to 05:00pm</h4></li>
+                    <li><h4>Saturday   <span>:</span>  9:00am to 03:00pm</h4></li>
+                    <li><h4>Sunday    <span>:</span>     closed</h4></li>
+                </ul>
+            </div>
+            </div>
+
+        <div class="col-md-4 p-0 three-col element-animate">
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                <img src="~/pictures/question-icon.png" />
+                <h2>Ask a question</h2>
+                <p>Feel free to ask any question and we will contact you to clear up the details.    </p>
+
+                <div class="col-lg-12 d-flex flex-column">
+                    <input name="patient-name" placeholder="Full Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" class="form-control mt-20" required="" type="text">
+                </div>
+
+                <div class="col-lg-6 d-flex flex-column">
+                    <br />
+                    <input name="email" placeholder="Email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email address'" class="form-control mt-20" required="" type="email">
+                </div>
+
+                <div class="col-lg-12 flex-column">
+                    <br />
+                    <textarea rows="5" class="form-control mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
+                    <br />
+                </div>
+
+                <div class="col-lg-12 d-flex justify-content-end send-btn">
+                    <button color="red">Submit</button>
+                    <hr />
+                </div>
+            </div>
+
+        </div>
+
+
+    </div>
+    
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+
+
+
+
+<h2 align="center">Our Doctors</h2>
+<p class="mb-0 lead" align="center">
+    With us your health is always in the first place
+    <hr />
+</p>
+<div class="container">
+    <div class="row justify-content-center mb-5 element-animate">
+        <div class="col-md-8 text-center mb-5">
+
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+
+    <div class="row">
+
+        <div class="col-md-4 p-0 one-col element-animate">
+            <div>
+                <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                    <img src="~/pictures/doctor1.jpg" alt="Image Placeholder" class="img-fluid">
+                    <div class="media-body">
+                        <h3 class="mt-0 text-black">Dr. Carl Smith</h3>
+                        <p>Anesthesiology, M.B.Ch.B.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="col-md-4 p-0 one-col element-animate">
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                <img src="~/pictures/doctor2.jpg" alt="Image Placeholder" class="img-fluid">
+                <div class="media-body">
+                    <h3 class="mt-0 text-black">Dr. Janice Doe</h3>
+                    <p>Ophthalmology, M.B.Ch.B</p>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="col-md-4 p-0 three-col element-animate">
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                <img src="~/pictures/doctor3.jpg" alt="Image Placeholder" class="img-fluid">
+                <div class="media-body">
+                    <h3 class="mt-0 text-black">Dr. Jean Doe</h3>
+                    <p>Family Medicine, B.Sc., M.D., CCFP</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+
 </div>
