Add images to the pictures folders

--- a/IQuad2/Views/Home/Index.cshtml
+++ b/IQuad2/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
 
         <div class="col-md-4 p-0 one-col element-animate">
-            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4"><img src="~/pictures/appointment.png" />
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4"><img src="~/Pictures/appointment.png" />
                 <h2>Make an Appointment</h2>
              
                 <div class="row">
@@ -54,7 +54,7 @@
 
         <div class="col-md-4 p-0 two-col element-animate">
             <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
-                <img src="~/pictures/clock.png" />
+                <img src="~/Pictures/clock.png" />
                 <h2>Opening Hours</h2>
                 <ul class="colm-1">
                     <li><h4>Monday - Friday <span>:</span>  8:00am to 05:00pm</h4></li>
@@ -66,7 +66,7 @@
 
         <div class="col-md-4 p-0 three-col element-animate">
             <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
-                <img src="~/pictures/question-icon.png" />
+                <img src="~/Pictures/question-icon.png" />
                 <h2>Ask a question</h2>
                 <p>Feel free to ask any question and we will contact you to clear up the details.    </p>
 
