--- a/IQuad2/Views/Shared/_Layout.cshtml
+++ b/IQuad2/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-   @Html.Partial("_NavBar")
+    @Html.Partial("_NavBar")
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -21,5 +21,62 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+
+
+
+
+    <!--> Home Page Slider  </!-->
+
+
+    <div class="container">
+        <div>
+
+            <div id="carousel " class="carousel slide">
+                <ol class="carousel-indicators">
+
+                    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel" data-slide-to="1"></li>
+                </ol>
+
+                <div class="carousel-inner">
+                    <div class=" item active">
+                        <img src="~/Pictures/slider2 (2).jpg" />
+
+                        <div class="container">
+                            <div class="carousel-caption">
+                                <p>Don’t look further. This is your Doctor</p>
+                                <h1>  WE ARE THE TEAM OF EXCELLENCE</h1>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="item">
+                        <img src="~/pictures/slider-2.jpg" />
+
+                        <div class="container">
+                            <div class="carousel-caption ">
+                                <h1> WE CARE FOR YOU</h1>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+            <script>
+                $("#carousel").carousel(
+                    {
+                        interval: 2000
+                    });
+            </script>
+
+        </div>
+        <hr />
+    </div>
+    <br />
+
 </body>
 </html>
