--- a/IQuad2/Views/Home/About.cshtml
+++ b/IQuad2/Views/Home/About.cshtml
@@ -1,7 +1,25 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<div style="text-align:center;">
+    <h2>About I-Quad</h2>
+
+    <p>I-Quad is a developing team comprising of four specialized members from the Northern Caribbean University. 
+      It includes Johnoy Mendez (Database Admin), Hakeem Gooden (Network Engineer), Raheem Robinson (Web Designer) and
+      Berthel Whyte (Network Admin/Entrepreneur). We strive to create or develope the most innovating products and services to 
+      impact the world on a global scale. We live by the motto, "If you can dream it, you can achieve it. If you can think it, you can
+      build it".</p>
+</div>
+
+<br />
+
+<div style="text-align:center;">
+    <h2>About I-Quad Medical Appointment System</h2>
+
+    <p>
+        I-Quad Medical Appointment system is a web application based in Jamaica that can be used on all platforms. 
+        We give doctors office the ability to provide an appointment system that is easy to use and enable patients to make 
+        appointments anywhere at any time.
+    </p>
+</div>
