Homepage(soon finish)

--- a/IQuad2/Views/Home/Index.cshtml
+++ b/IQuad2/Views/Home/Index.cshtml
@@ -5,19 +5,260 @@
 }
 
 <div class="container">
+    <div>
+
+        <div id="carousel " class="carousel slide">
+            <ol class="carousel-indicators">
+
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+            </ol>
+
+            <div class="carousel-inner">
+                <div class=" item active">
+                    <img src="~/Pictures/pexel_2.jpg" />
+
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <p style=" font-size:15px; 'Agency FB'"><b>Don’t look further. This is your Doctor</b></p>
+                            <h1 style="font-family: 'Agency FB'" ><b>  WE ARE THE TEAM OF EXCELLENCE</b></h1>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="item">
+                    <img src="~/pictures/slider-2.jpg" />
+
+                    <div class="container">
+                        <div class="carousel-caption ">
+                            <h1> WE CARE FOR YOU</h1>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+        <script>
+            $("#carousel").carousel(
+                {
+                    interval: 2000
+                });
+        </script>
+
+    </div>
+   
+</div>
+
+
+
+
+
+<h3 align="center"><b>How Can We Help You</b></h3>
+<p class="mb-0 lead" style="font-size:15px;" align="center">
+    READ MORE ABOUT OUR SERVICES
+    <hr />
+</p>
+
+
+<div class="container">
+    <div class="row justify-content-center mb-5 element-animate">
+        <div class="col-md-8 text-center mb-5">
+
+        </div>
+    </div>
+
+    <div class="row">
+
+        <div class="col-md-3 p-0 one-col element-animate">
+            <div>
+                <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                    <img src="~/Pictures/icon3_0004_.jpg" alt="Image Placeholder" class="img-fluid">
+                    <div class="media-body">
+                        <h3 class="mt-0 text-black">Ophthalmology</h3>
+                        <p>Ophthalmology is the branch of medicine that deals with the anatomy, physiology and diseases of the eye. All evaluations that purport to diagnose eye disease should be carried out by a physician. ... Since ophthalmologists perform operations on eyes, they are considered to be both surgical and medical specialists</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="col-md-3 p-0 one-col element-animate">
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                <img src="~/pictures/icon3_0005_.jpg" alt="Image Placeholder" class="img-fluid">
+                <div class="media-body">
+                    <h3 class="mt-0 text-black">Cardiology</h3>
+                    <p>Cardiology is the study and treatment of disorders of the heart and the blood vessels. A person with heart disease or cardiovascular disease may be referred to a cardiologist. Cardiology is a branch of internal medicine. ... A cardiologist specializes in diagnosing and treating diseases of the cardiovascular system.</p>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="col-md-3 p-0 three-col element-animate">
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                <img src="~/pictures/icon3_0001_.jpg" alt="Image Placeholder" class="img-fluid">
+                <div class="media-body">
+                    <h3 class="mt-0 text-black">Pediatrics</h3>
+                    <p>Pediatrics is the branch of medicine that involves the medical care of infants, children, and adolescents. The American Academy of Pediatrics recommends people be under pediatric care up to the age of 21, thought usually only minors under 18 are required to be under pediatric care.</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-md-3 p-0 three-col element-animate">
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                <img src="~/pictures/icon3_0000_.jpg" alt="Image Placeholder" class="img-fluid">
+                <div class="media-body">
+                    <h3 class="mt-0 text-black">Radiology</h3>
+                    <p>A radiology information system (RIS) is a networked software system for managing medical imagery and associated data. A RIS is especially useful for tracking radiology imaging orders and billing information, and is often used in conjunction with PACS and VNAs to manage image archives, record-keeping and billing.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr />
+    <br />
+</div>
+
+
+
+<div class="container">
+    <div class="row justify-content-center mb-5 element-animate">
+        <div class="col-md-8 text-center mb-5">
+
+        </div>
+    </div>
+
+    <div class="row">
+
+        <div class="col-md-6 p-0 one-col element-animate">
+            <div>
+                <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+
+                    <div class="media-body">
+                        <img src="~/Pictures/Layer1.png" alt="Image Placeholder" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="col-md-6 p-0 one-col element-animate">
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                <img src="~/pictures/icon3_0003_.jpg" alt="Image Placeholder" class="img-fluid">
+                <div class="media-body">
+                    <h3><b>I-Quad</b>  Medical Appointment System</h3>
+                    <p style="font-size:17px;">Professional Care</p>
+                    <p> Home care and home health care include a range of medical and non-medical caregiving services provided in your home. Services can usually be arranged to meet your needs – a few hours a week up to 24 hours a day, seven days a week and could be done by a single person or a team. Medicare generally doesn’t pay for long-term care but will help pay for skilled nursing or home health care if you meet certain conditions. Use the Medicare Eligibility Tool to check your eligibility.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+
+
+<h3 align="center"><b>Our Doctors</b></h3>
+<p class="mb-0 lead" style="font-size:15px;" align="center">
+    With us your health is always in the first place
+
+</p>
+<br />
+
+<div class="container">
+    <div class="row justify-content-center mb-5 element-animate">
+        <div class="col-md-8 text-center mb-5">
+
+        </div>
+    </div>
+
+    <div class="row">
+
+        <div class="col-md-3 p-0 one-col element-animate">
+            <div>
+                <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                    <img src="~/pictures/doc22.png" alt="Image Placeholder" class="img-fluid">
+                    <div class="media-body">
+                        <h3 class="mt-0 text-black" style="font-size:19px;"><b>Dr. Carl Smith</b></h3>
+                        <p>Radiologist, M.B.Ch.B.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="col-md-3 p-0 one-col element-animate">
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                <img src="~/pictures/doc11.png" alt="Image Placeholder" class="img-fluid">
+                <div class="media-body">
+                    <h3 class="mt-0 text-black"style="font-size:19px;"><b>Dr. Janice Smith</b></h3>
+                    <p>Pediatrician, M.B.Ch.B</p>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="col-md-3 p-0 one-col element-animate">
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                <img src="~/pictures/doc33.png" alt="Image Placeholder" class="img-fluid">
+                <div class="media-body">
+                    <h3 class="mt-0 text-black" style="font-size:19px;"><b>Dr. James Brady</b></h3>
+                    <p> Cardiologist, B.Sc., M.D., CCFP</p>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="col-md-3 p-0 one-col element-animate">
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                <img src="~/pictures/doc44.png" alt="Image Placeholder" class="img-fluid">
+                <div class="media-body">
+                    <h3 class="mt-0 text-black" style="font-size:19px;"><b>Dr. Jennifer Johnson</b></h3>
+                    <p>Ophthalmologist, B.Sc., M.D., CCFP</p>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </div>
+
+</div>
+<br />
+<br />
+<hr />
+
+
+<div class="container">
     <div class="row">
 
         <div class="col-md-4 p-0 one-col element-animate">
-            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4"><img src="~/Pictures/appointment.png" />
-                <h2>Make an Appointment</h2>
-             
+            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
+                <img src="~/Pictures/appointment.png" />
+                <h3><b>Make an Appointment</b></h3>
+                <p>And we will contact you.</p>
+
                 <div class="row">
                     <div class="col-lg-12 d-flex flex-column">
                         <input name="patient-name" placeholder="Full Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Patient Name'" class="form-control mt-20" required="" type="text">
                     </div><br />
 
                     <div class="col-lg-6 d-flex flex-column">
-                    <br />
+                        <br />
                         <input name="phone" placeholder="Phone" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone'" class="form-control mt-20" required="" type="text">
                     </div>
 
@@ -32,14 +273,14 @@
                     </div>
 
                     <div class="col-lg-6 d-flex flex-column">
-                    <br />
+                        <br />
                         <input name="appoinment-date" placeholder="Appoinment date" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Appoinment date'" class="form-control mt-20" required="" type="text" id="datepicker2">
                     </div><br />
 
                     <div class="col-lg-12 flex-column">
-                    <br />
-                    <textarea rows="5" class="form-control mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
-                    </div> 
+                        <br />
+                        <textarea rows="5" class="form-control mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
+                    </div>
 
                     <div class="col-lg-12 d-flex justify-content-end send-btn">
                         <br />
@@ -48,27 +289,26 @@
 
                     <div class="alert-msg"></div>
                 </div>
-                <hr />
+
             </div>
         </div>
 
         <div class="col-md-4 p-0 two-col element-animate">
             <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
                 <img src="~/Pictures/clock.png" />
-                <h2>Opening Hours</h2>
+                <h3><b>Opening Hours</b></h3>
                 <ul class="colm-1">
-                    <li><h4>Monday - Friday <span>:</span>  8:00am to 05:00pm</h4></li>
-                    <li><h4>Saturday   <span>:</span>  9:00am to 03:00pm</h4></li>
-                    <li><h4>Sunday    <span>:</span>     closed</h4></li>
+                    <li><p>Monday - Friday <span>:</span>  8:00am to 05:00pm</p></li>
+                    <li><p>Saturday   <span>:</span>  9:00am to 03:00pm</p></li>
+                    <li><p>Sunday    <span>:</span>     closed</p></li>
                 </ul>
             </div>
-            </div>
+        </div>
 
         <div class="col-md-4 p-0 three-col element-animate">
             <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
                 <img src="~/Pictures/question-icon.png" />
-                <h2>Ask a question</h2>
-                <p>Feel free to ask any question and we will contact you to clear up the details.    </p>
+                <h3><b>Ask a question</b></h3>                <p>Feel free to ask any question and we will contact you to clear up the details.    </p>
 
                 <div class="col-lg-12 d-flex flex-column">
                     <input name="patient-name" placeholder="Full Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" class="form-control mt-20" required="" type="text">
@@ -87,73 +327,14 @@
 
                 <div class="col-lg-12 d-flex justify-content-end send-btn">
                     <button color="red">Submit</button>
-                    <hr />
+
                 </div>
             </div>
 
         </div>
 
 
-    </div>
-    
-</div>
-
-
-
-
-
-<h2 align="center">Our Doctors</h2>
-<p class="mb-0 lead" align="center">
-    With us your health is always in the first place
-    <hr />
-</p>
-
-<div class="container">
-    <div class="row justify-content-center mb-5 element-animate">
-        <div class="col-md-8 text-center mb-5">
-
-        </div>
-    </div>
-
-    <div class="row">
-
-        <div class="col-md-4 p-0 one-col element-animate">
-            <div>
-                <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
-                    <img src="~/pictures/doctor1.jpg" alt="Image Placeholder" class="img-fluid">
-                    <div class="media-body">
-                        <h3 class="mt-0 text-black">Dr. Carl Smith</h3>
-                        <p>Anesthesiology, M.B.Ch.B.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-        <div class="col-md-4 p-0 one-col element-animate">
-            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
-                <img src="~/pictures/doctor2.jpg" alt="Image Placeholder" class="img-fluid">
-                <div class="media-body">
-                    <h3 class="mt-0 text-black">Dr. Janice Doe</h3>
-                    <p>Ophthalmology, M.B.Ch.B</p>
-                </div>
-            </div>
-        </div>
-
-
-
-
-
-        <div class="col-md-4 p-0 three-col element-animate">
-            <div class="col-inner p-xl-5 p-lg-5 p-md-4 p-sm-4 p-4">
-                <img src="~/pictures/doctor3.jpg" alt="Image Placeholder" class="img-fluid">
-                <div class="media-body">
-                    <h3 class="mt-0 text-black">Dr. Jean Doe</h3>
-                    <p>Family Medicine, B.Sc., M.D., CCFP</p>
-                </div>
-            </div>
-        </div>
     </div>
 
 </div>
+
