--- a/IQuad2/Views/Home/About.cshtml
+++ b/IQuad2/Views/Home/About.cshtml
@@ -2,24 +2,61 @@
     ViewBag.Title = "About";
 }
 
-<div style="text-align:center;">
-    <h2>About I-Quad</h2>
 
-    <p>I-Quad is a developing team comprising of four specialized members from the Northern Caribbean University. 
-      It includes Johnoy Mendez (Database Admin), Hakeem Gooden (Network Engineer), Raheem Robinson (Web Designer) and
-      Berthel Whyte (Network Admin/Entrepreneur). We strive to create or develope the most innovating products and services to 
-      impact the world on a global scale. We live by the motto, "If you can dream it, you can achieve it. If you can think it, you can
-      build it".</p>
+<div>
+
+    <div id="carousel " class="carousel slide">
+        <ol class="carousel-indicators">
+
+            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel" data-slide-to="1"></li>
+        </ol>
+
+        <div class="carousel-inner">
+            <div class=" item active">
+                <img src="~/Pictures/About-image.jpg" />
+
+                <div class="container">
+                    <div class="carousel-caption">
+                        <p style=" color:black; font-size:15px;'Agency FB'"><b>I-Quad Medical Appointment System</b></p>
+                        <h1 style="color:black; font-family:'Agency FB'"><b>THE TEAM OF EXCELLENCE</b></h1>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+
+</div>
+
+
+
+
+
+<div style="text-align:center;">
+    <h2 style="color:black">About I-Quad</h2>
+
+    <p>
+        I-Quad is a developing team comprising of four specialized members from the Northern Caribbean University.
+        It includes Johnoy Mendez (Database Admin), Hakeem Gooden (Network Engineer), Raheem Robinson (Web Developer) and
+        Berthel Whyte (Network Admin/Entrepreneur). We strive to create or develope the most innovating products and services to
+        impact the world on a global scale. We live by the motto, "If you can dream it, you can achieve it. If you can think it, you can
+        build it".
+    </p>
 </div>
 
 <br />
 
 <div style="text-align:center;">
-    <h2>About I-Quad Medical Appointment System</h2>
+    <h2 style="color:black"> About I-Quad Medical Appointment System</h2>
 
     <p>
-        I-Quad Medical Appointment system is a web application based in Jamaica that can be used on all platforms. 
-        We give doctors office the ability to provide an appointment system that is easy to use and enable patients to make 
+        I-Quad Medical Appointment system is a web application based in Jamaica that can be used on all platforms.
+        We give doctors office the ability to provide an appointment system that is easy to use and enable patients to make
         appointments anywhere at any time.
     </p>
+    <br />
+    <br />
 </div>
