--- a/IQuad2/Views/Appointment/Appointment_Set.cshtml
+++ b/IQuad2/Views/Appointment/Appointment_Set.cshtml
@@ -1,8 +1,9 @@
 ﻿
 @{
     ViewBag.Title = "Appointment_Set";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+   
 <h2>Appointment_Set</h2>
 <p> Thank you for using our service. Your appointment has been set.</p>
 
