--- a/IQuad2/Views/Appointment/Set_Appointment.cshtml
+++ b/IQuad2/Views/Appointment/Set_Appointment.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <h2>Set_Appointment</h2>
 @using (Html.BeginForm("Create", "Appointment"))
 {
@@ -17,17 +18,17 @@
     <div class="form-group">
 
         @Html.LabelFor(m => m.appointment.Date)
-        @Html.TextBoxFor(m => m.appointment.Date, new { @class = "form-control" })
+        @Html.EditorFor(m => m.appointment.Date, new { htmlAttributes = new { @class = "form-control date-picker" } })
     </div>
     <div class="form-group">
 
         @Html.LabelFor(m => m.appointment.StartTime)
-        @Html.TextBoxFor(m => m.appointment.StartTime, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.appointment.StartTime, new { @class = "form-control timepicker" })
     </div>
     <div class="form-group">
 
         @Html.LabelFor(m => m.appointment.EndTime)
-        @Html.TextBoxFor(m => m.appointment.EndTime, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.appointment.EndTime, new { @class = "form-control timepicker" })
     </div>
     <div class="form-group">
 
@@ -38,9 +39,37 @@
 
     </div>
 
+
     <button type="submit" class="btn btn-primary">Set Appointment</button>
 
+    @section scripts{
 
+        <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
+        <script src="~/Scripts/jquery-3.3.1.min.js"></script>
+        <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+
+        <link href="~/Content/jquery.timepicker.css" rel="stylesheet" />
+        <script src="~/Scripts/jquery.timepicker.js"></script>
+        <script src="~/Scripts/jquery.timepicker.min.js"></script>
+
+        <script type="text/javascript">
+
+            $(function () {
+                $(".date-picker").datepicker({
+                    dateFormat: 'dd-M-yy',
+                    changeMonth: true,
+                    changeYear: true,
+                    yearRange: "2015:2025"
+
+                });
+
+            });
+            $(document).ready(function () {
+                $('input.timepicker').timepicker({});
+            });
+
+        </script>
+    }
 }
 
 
